fix spacing issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,6 +118,7 @@ $tech-font: 'Roboto Mono';
     text-decoration: none;
     color: black;
     margin-top: $sp-xxl;
+    padding-bottom: $sp-xl;
     
 }
 
